<resources>
    <string name="app_name" translatable="false">Iconify</string>
    <string name="app_moto">Customize Boring Android UI</string>
    <string name="init_module_installation">Initializing setup</string>
    <string name="step">Step</string>
    <string name="step_number">Step %1$d/%2$d</string>
    <string name="module_installation_step1">Creating module shell</string>
    <string name="module_installation_step2">Extracting necessary files</string>
    <string name="module_installation_step3">Creating overlay APKs</string>
    <string name="module_installation_step4">Aligning overlay APKs</string>
    <string name="module_installation_step5">Signing overlay APKs</string>
    <string name="module_installation_step6">Cleaning directories</string>
    <string name="onboarding_title_1">Got Bored of Stock UI ?</string>
    <string name="onboarding_subtitle_1">Let\'s customize everything to our likings.</string>
    <string name="onboarding_desc_1">Ditch the stock UI monotony – personalize every tech detail to match your style and preferences.</string>
    <string name="onboarding_title_2">Is My Device Supported ?</string>
    <string name="onboarding_subtitle_2">Iconify supports all Pixel and AOSP ROMs.</string>
    <string name="onboarding_desc_2">Compatible with all Pixel and AOSP-based ROMs, ensuring broad support for Android devices.</string>
    <string name="onboarding_title_3">Shall We Begin Now ?</string>
    <string name="onboarding_subtitle_3">It is time for iconify to do some internal work.</string>
    <string name="onboarding_desc_3">Starting internal tasks, marking the initiation of essential work. Ready to begin?</string>
    <string name="need_storage_perm_title">Need Storage Permission</string>
    <string name="need_storage_perm_desc">Storage permission is required to build the necessary files.</string>
    <string name="compatible_root_not_found_title">Could Not Find Compatible Root Method</string>
    <string name="compatible_root_not_found_desc">Use any popular root solutions to proceed.</string>
    <string name="root_not_found_title">Root Is Not Accessible</string>
    <string name="root_not_found_desc">Looks like your device is not rooted!</string>
    <string name="need_reboot_title">Need Device Reboot</string>
    <string name="need_reboot_desc">Reboot your device to put all files in place.</string>
    <string name="installation_failed_title">Oops Did Not Expect That</string>
    <string name="installation_failed_desc">Logs have been saved in documents folder.</string>
    <string name="logs">Logs</string>
    <string name="activity_title_home_page">Iconify</string>
    <string name="activity_title_icon_pack">Icon Pack</string>
    <string name="activity_desc_icon_pack">Change system icon pack</string>
    <string name="activity_title_signal_icons">Signal Icons</string>
    <string name="activity_desc_signal_icons">Change system signal icons</string>
    <string name="activity_title_wifi_icons">WiFi Icons</string>
    <string name="activity_desc_wifi_icons">Change system WiFi icons</string>
    <string name="activity_title_brightness_bar">Brightness Bar</string>
    <string name="activity_desc_brightness_bar">Customize progress slider</string>
    <string name="activity_title_qs_shape">QS Panel Tiles</string>
    <string name="activity_desc_qs_shape">Customize QS panel tiles</string>
    <string name="activity_title_notification">Notification</string>
    <string name="activity_desc_notification">Customize notification style</string>
    <string name="activity_title_progress_bar">Progress Bar</string>
    <string name="activity_desc_progress_bar">Use different progress style</string>
    <string name="activity_title_switch">Switch</string>
    <string name="activity_desc_switch">Customize switch appearance</string>
    <string name="activity_title_toast_frame">Toast Frame</string>
    <string name="activity_desc_toast_frame">Change toast notification style</string>
    <string name="activity_title_icon_shape">Icon Shape</string>
    <string name="activity_desc_icon_shape">Change system icon shapes</string>
    <string name="iconify_updated_title">Iconify Just Got Updated!</string>
    <string name="iconify_updated_desc">Reboot your phone to use the latest added features and options.</string>
    <string name="home_card_title">Design It Your Way</string>
    <string name="home_card_subtitle">Unleash Your Imagination, Make It Yours</string>
    <string name="home_card_hide">Hide</string>
    <string name="activity_title_color_engine">Color Engine</string>
    <string name="activity_desc_color_engine">Have control over colors</string>
    <string name="activity_title_ui_roundness">UI Roundness</string>
    <string name="activity_desc_ui_roundness">Change corner radius of interface</string>
    <string name="activity_title_qs_row_column">Row and Column</string>
    <string name="activity_desc_qs_row_column">Change Qs tile rows and columns</string>
    <string name="activity_title_qs_icon_label">Icon and Label</string>
    <string name="activity_desc_qs_icon_label">Change icon and label options</string>
    <string name="activity_title_qs_tile_size">QS Tile Size</string>
    <string name="activity_desc_qs_tile_size">Change height of QS panel tile</string>
    <string name="activity_title_qs_panel_margin">QS Panel Margin</string>
    <string name="activity_desc_qs_panel_margin">Modify quick settings margins</string>
    <string name="activity_title_statusbar">Statusbar</string>
    <string name="activity_desc_statusbar">Modify statusbar interface</string>
    <string name="activity_title_navigation_bar">Navigation Bar</string>
    <string name="activity_desc_navigation_bar">Tweak navigation options</string>
    <string name="activity_title_volume_panel">Volume Panel</string>
    <string name="activity_desc_volume_panel">Customize volume panel design</string>
    <string name="activity_title_media_player">Media Player</string>
    <string name="activity_desc_media_player">Change how media player looks</string>
    <string name="activity_title_miscellaneous">Miscellaneous</string>
    <string name="activity_desc_miscellaneous">Miscellaneous customization</string>
    <string name="activity_title_xposed_menu">Xposed Menu</string>
    <string name="activity_desc_xposed_menu">LSPosed required for these options</string>
    <string name="activity_title_extras">Extras</string>
    <string name="activity_desc_extras">Additional tweaks and options</string>
    <string name="settings_section_title_general">General</string>
    <string name="settings_app_language">Language</string>
    <string name="settings_app_icon">App Icon</string>
    <string name="settings_app_icon_default">Default Icon</string>
    <string name="settings_app_icon_themed">Themed Icon</string>
    <string name="settings_app_icon_retro">Retro Icon</string>
    <string name="settings_app_theme">App Theme</string>
    <string name="settings_app_theme_light">Light Theme</string>
    <string name="settings_app_theme_dark">Dark Theme</string>
    <string name="settings_app_theme_system">Follow System</string>
    <string name="settings_section_title_update">Update</string>
    <string name="settings_check_for_update">Check For Update</string>
    <string name="settings_current_version">Current version: %s</string>
    <string name="settings_auto_update_title">Auto Update</string>
    <string name="settings_auto_update_desc">Check for new versions in background.</string>
    <string name="settings_auto_update_title_wifi_only">Check Over WiFi Only</string>
    <string name="settings_auto_update_desc_wifi_only">Check for updates over wifi only.</string>
    <string name="settings_section_title_xposed">Xposed</string>
    <string name="settings_show_warning_title">Show Warning</string>
    <string name="settings_show_warning_desc">Show warning on how to re-optimize module in Xposed Menu.</string>
    <string name="settings_restart_systemui_behavior">Mod Applying Method</string>
    <string name="settings_auto_restart_systemui">Automatically restart SystemUI</string>
    <string name="settings_auto_force_reload_ui">Automatically force reload UI</string>
    <string name="settings_manual_restart_systemui">Notify for manual SystemUI restart</string>
    <string name="settings_systemui_restart_required">SystemUI restart required</string>
    <string name="settings_section_title_miscellaneous">Miscellaneous</string>
    <string name="settings_restart_systemui_after_boot_title">Restart SystemUI After Boot</string>
    <string name="settings_restart_systemui_after_boot_desc">Some options like blur intensity doesn\'t take effect until systemui is restarted</string>
    <string name="settings_show_home_page_card_title">Show Home Page Card</string>
    <string name="settings_show_home_page_card_desc">Show a beautiful card on the home page.</string>
    <string name="settings_clear_app_cache_title">Clear App Cache</string>
    <string name="settings_clear_app_cache_desc">Clear caches generated due to the usage of custom fonts, images, or gifs.</string>
    <string name="activity_title_experimental">Experimental</string>
    <string name="activity_desc_experimental">Try out experimental functionalities.</string>
    <string name="settings_disable_everything_title">Disable Everything</string>
    <string name="settings_disable_everything_desc">Disable all Iconify overlays, colors, and miscellaneous changes.</string>
    <string name="settings_section_title_about">About</string>
    <string name="settings_github_repository_title">Github Repository</string>
    <string name="settings_github_repository_desc" translatable="false">Mahmud0808/Iconify</string>
    <string name="settings_telegram_group_title">Telegram Group</string>
    <string name="settings_telegram_group_desc" translatable="false">\@IconifyDiscussion</string>
    <string name="settings_credits_title">Credits</string>
    <string name="settings_credits_desc">Thanking those who made this possible.</string>
    <string name="activity_title_colored_battery">Colored Battery</string>
    <string name="activity_desc_colored_battery">Change battery icon color</string>
    <string name="activity_title_media_icons">Media Icons</string>
    <string name="activity_desc_media_icons">Change media player icons</string>
    <string name="activity_title_settings_icons">Settings Icons</string>
    <string name="activity_desc_settings_icons">Change settings icon pack</string>
    <string name="icon_pack_styles">Icon Pack Styles</string>
    <string name="iconpack_aurora_desc">Dual tone linear icon pack</string>
    <string name="iconpack_gradicon_desc">Gradient shaded filled icon pack</string>
    <string name="iconpack_lorn_desc">Thick linear icon pack</string>
    <string name="iconpack_plumpy_desc">Dual tone filled icon pack</string>
    <string name="iconpack_acherus_desc">Acherus sub icon pack</string>
    <string name="iconpack_circular_desc">Thin line icon pack</string>
    <string name="iconpack_filled_desc">Dual tone filled icon pack</string>
    <string name="iconpack_kai_desc">Thin line icon pack</string>
    <string name="iconpack_oos_desc">Oxygen OS icon pack</string>
    <string name="lockscreen_widgets_enabled_title">Enable Lockscreen Widgets</string>
    <string name="lockscreen_widgets_enabled_summary">Add widgets to lockscreen</string>
    <string name="lockscreen_display_widgets_title">Device info Widget</string>
    <string name="lockscreen_display_widgets_summary">Show device info widget on lockscreen</string>
    <string name="main_custom_widgets1">Big widget 1</string>
    <string name="main_custom_widgets2">Big widget 2</string>
    <string name="custom_widgets1">Mini widget 1</string>
    <string name="custom_widgets2">Mini widget 2</string>
    <string name="custom_widgets3">Mini widget 3</string>
    <string name="custom_widgets4">Mini widget 4</string>
</resources>